<resources>
    <string name="app_name">PRAKTIK 1</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="masukan_panjang">Masukan Panjang</string>
    <string name="masukan_tinggi">Masukan Tinggi</string>
    <string name="masukan_lebar">Masukan Lebar</string>
    <string name="hasil">HASIL</string>
    <string name="hitung">Hitung</string>
</resources>